@@ -1,3 +1,6 @@
+[B]Version 2.0.7[/B]
+- Fixed infoLabels for "Other Episodes"
+
 [B]Version 2.0.6[/B]
 
 - Added default view for Confluence skin
